--- a/web/index.html
+++ b/web/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h2>Hello world, how are we goin to move forward?</h2>
+
+    <h4>Place holder for the title text</h4>
 </body>
 </html>
